--- a/app/src/main/res/layout/fragment_repository_details.xml
+++ b/app/src/main/res/layout/fragment_repository_details.xml
@@ -1,6 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/appbar"
+        layout="@layout/toolbar_with_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/padding_containers"
+            android:layout_marginBottom="@dimen/margin_medium">
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_language" />
+
+            <TextView
+                android:id="@+id/txtLanguage"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_created_at" />
+
+            <TextView
+                android:id="@+id/txtCreatedAt"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_updated_at" />
+
+            <TextView
+                android:id="@+id/txtUpdatedAt"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_watchers_count" />
+
+            <TextView
+                android:id="@+id/txtWatchersCount"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_forks_count" />
+
+            <TextView
+                android:id="@+id/txtForksCount"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_issues_count" />
+
+            <TextView
+                android:id="@+id/txtIssuesCount"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <Button
+                android:id="@+id/btnRepository"
+                style="@style/DetailsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/repository_details_repository_button"
+                android:textAllCaps="false"/>
+
+            <TextView
+                style="@style/DetailsSubtitle"
+                android:layout_marginTop="@dimen/margin_large"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_about" />
+
+            <ImageView
+                android:id="@+id/imgUser"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerInside"
+                android:layout_marginBottom="@dimen/margin_medium"/>
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_name" />
+
+            <TextView
+                android:id="@+id/txtOwnerName"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_company" />
+
+            <TextView
+                android:id="@+id/txtOwnerCompany"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_location" />
+
+            <TextView
+                android:id="@+id/txtOwnerLocation"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_email" />
+
+            <TextView
+                android:id="@+id/txtOwnerEmail"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <TextView
+                style="@style/DetailsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_details_owner_bio" />
+
+            <TextView
+                android:id="@+id/txtOwnerBio"
+                style="@style/DetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <Button
+                android:id="@+id/btnOwner"
+                style="@style/DetailsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/repository_details_owner_button"
+                android:textAllCaps="false"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
