--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="padding_drawable">4dp</dimen>
 
     <dimen name="margin_medium">8dp</dimen>
+    <dimen name="margin_large">24dp</dimen>
 
 </resources>
