--- a/app/src/main/res/layout/fragment_repository_details.xml
+++ b/app/src/main/res/layout/fragment_repository_details.xml
@@ -121,6 +121,7 @@
                 android:id="@+id/imgUser"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:contentDescription="@null"
                 android:scaleType="centerInside"
                 android:layout_marginBottom="@dimen/margin_medium"/>
 
