--- a/app/src/main/res/layout/fragment_repository_details.xml
+++ b/app/src/main/res/layout/fragment_repository_details.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/padding_containers"
-            android:layout_marginBottom="@dimen/margin_medium">
+            android:layout_marginBottom="@dimen/margin_large">
 
             <TextView
                 style="@style/DetailsLabel"
@@ -33,8 +33,7 @@
                 android:id="@+id/txtLanguage"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -46,8 +45,7 @@
                 android:id="@+id/txtCreatedAt"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -59,8 +57,7 @@
                 android:id="@+id/txtUpdatedAt"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -72,8 +69,7 @@
                 android:id="@+id/txtWatchersCount"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -85,8 +81,7 @@
                 android:id="@+id/txtForksCount"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -98,8 +93,7 @@
                 android:id="@+id/txtIssuesCount"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/btnRepository"
@@ -107,8 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/repository_details_repository_button"
-                android:textAllCaps="false"/>
+                android:text="@string/repository_details_repository_button"/>
 
             <TextView
                 style="@style/DetailsSubtitle"
@@ -135,8 +128,7 @@
                 android:id="@+id/txtOwnerName"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -148,8 +140,7 @@
                 android:id="@+id/txtOwnerCompany"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -161,8 +152,7 @@
                 android:id="@+id/txtOwnerLocation"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -174,8 +164,7 @@
                 android:id="@+id/txtOwnerEmail"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 style="@style/DetailsLabel"
@@ -187,8 +176,7 @@
                 android:id="@+id/txtOwnerBio"
                 style="@style/DetailsValue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/btnOwner"
@@ -196,8 +184,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/repository_details_owner_button"
-                android:textAllCaps="false"/>
+                android:text="@string/repository_details_owner_button"/>
 
         </LinearLayout>
 
