--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="ItemLabel">
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
     <style name="DetailsSubtitle">
         <item name="android:textSize">20sp</item>
     </style>
 
     <style name="DetailsButton">
         <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="DetailsLabel">
@@ -15,6 +21,7 @@
 
     <style name="DetailsValue">
         <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_medium</item>
     </style>
 
 </resources>
